Change CV style

--- a/cv/styles/main.css
+++ b/cv/styles/main.css
@@ -2598,7 +2598,8 @@ textarea.form-control:focus, textarea.form-control:active {
 }
 
 .progress-container.progress-primary .progress {
-  background: rgba(55, 140, 63, 0.4);
+  /*background: rgba(55, 140, 63, 0.4);*/
+  background: transparent;
 }
 
 .progress-container.progress-primary .progress-bar {
