update error pages

--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -7,11 +7,11 @@ layout: base
 		{% assign error = site.data.errors[page.error] %}
 		<div class="display-1 text-muted mb-5"><i class="si si-exclamation"></i> {{ error.name }}</div>
 
-		<h1 class="h2 mb-3">Oops.. You just found an error page..</h1>
+		<h1 class="h2 mb-3">Achievement unlocked!.. You just found an error page..</h1>
 		<p class="h4 text-muted font-weight-normal mb-7">{{ error.description }}&hellip;</p>
 
 		<a class="btn btn-primary" href="javascript:history.back()">
-			<i class="fe fe-arrow-left mr-2"></i>Go back
+			<i class="fe fe-arrow-left mr-2"></i>Get back to a safe place
 		</a>
 	</div>
 </div>
