fix resume button links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 						</ul>
 					</div>
 					<div class="col-auto">
-						<a href="/resume/" class="btn btn-outline-primary btn-sm">View Resume</a>
+						<a href="/resume" class="btn btn-outline-primary btn-sm">View Resume</a>
 					</div>
 				</div>
 			</div>
