--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 
 			<div class="d-flex order-lg-2 ml-auto">
 				<div class="nav-item d-none d-md-flex">
-					<a href="/resume/" class="btn btn-sm btn-outline-primary">View Resume</a>
+					<a href="/resume" class="btn btn-sm btn-outline-primary">View Resume</a>
 				</div>
 
 			</div>
