--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,12 @@
 <link rel="icon" href="/fav.png" type="image/x-icon"/>
 <link rel="shortcut icon" type="image/x-icon" href="/fav.png" />
 
+<meta name="author" content="Aryan Ebrahimpour">
+<meta property="og:title" content="0xaryan's Personal Website">
+<meta property="og:type" content="website">
+<meta property="og:description" content="The non-technical personal website of a technical fella.">
+<meta property="og:locale" content="en-US">
+
 <!-- Generated: {{ site.time }} -->
 
 <title>{% if page.title %}{{ page.title }} - {% endif %}{% if layout.title %}{{ layout.title }} - {% endif %}{{ site.description }}</title>
