--- a/_includes/cards/profile-contact.html
+++ b/_includes/cards/profile-contact.html
@@ -3,7 +3,7 @@
 		<h3 class="card-title">Contact Me</h3>
 	</div>
 	<div class="card-body">
-		<form>
+		<form action="https://formspree.io/aryanebrahimpour@gmail.com" method="POST">
 			<div class="row">
 				<div class="col-auto">
 					<span class="avatar avatar-xl" style="background-image: url({{ site.data.users[0].photo }})"></span>
@@ -11,19 +11,24 @@
 				<div class="col">
 					<div class="form-group">
 						<label class="form-label">Your Name:</label>
-						<input class="form-control" placeholder="John Doe"/>
+						<input class="form-control" type="text" name="name" required="required" placeholder="John Doe"/>
 					</div>
 				</div>
 			</div>
 
 			<div class="form-group">
+				<label class="form-label">Subject</label>
+				<input class="form-control" type="text" name="Subject" placeholder="Do animals talk to you?"/>
+			</div>
+
+			<div class="form-group">
 				<label class="form-label">Message</label>
-				<textarea class="form-control" rows="5" placeholder="Don't be shy, say something."></textarea>
+				<textarea class="form-control" name="message" rows="5" placeholder="Don't be shy, say something."></textarea>
 			</div>
 
 			<div class="form-group">
 				<label class="form-label">Email-Address</label>
-				<input class="form-control" placeholder="your-email@domain.com"/>
+				<input class="form-control" type="email" name="_replyto" placeholder="your-email@domain.com"/>
 			</div>
 
 			<div class="form-footer">
