--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,8 +52,11 @@ permalink: /post/
 		</div>
 
 		{% if page.comments %}
-			{% include disqus.html %}
+		<div class="col-lg-12 order-lg-2 col-md-12">
+			{% capture comments_section%}{% include disqus.html %}{%endcapture%}
+			{% include cards/card.html title="Comments" show-fullscreen=true content=comments_section %}
+		</div>
 		{% endif %}
-
 	</div>
+
 </div>
