--- a/_includes/cards/blog-single.html
+++ b/_includes/cards/blog-single.html
@@ -27,7 +27,7 @@
 				<small class="d-block text-muted">{{ article.date | date: '%B %d, %Y' }}</small>
 			</div>
 			<div class="ml-auto {% if liked %}text-red{% else %}text-muted{% endif %}">
-				<a href="javascript:void(0)" class="icon d-none d-md-inline-block ml-3"><i class="fe fe-heart mr-1"></i></a>
+				<a href="{{ site.base }}{{ article.url }}#disqus_thread" class="icon d-none d-md-inline-block ml-3"></a>
 			</div>
 		</div>
 	</div>
