Fix for: Simon the Fortnite Skin Manager (and admin of +120 groups) suggestions

--- a/_includes/footer-sub.html
+++ b/_includes/footer-sub.html
@@ -11,21 +11,21 @@
 					</div>
 					<div class="col-6 col-md-3">
 						<ul class="list-unstyled mb-0">
-							<li><a href="https://stackoverflow.com/users/7825034/aryan?tab=profile">Stack overflow</a></li>
+							<li><a href="https://stackoverflow.com/users/7825034/aryan?tab=profile">Stack Overflow</a></li>
 							<li><a href="https://www.linkedin.com/in/0xaryan/">Linkedin</a></li>
 						</ul>
 					</div>
 					<div class="col-6 col-md-3">
 						<ul class="list-unstyled mb-0">
 								<li><a href="http://t.me/Oxaryan">Telegram</a></li>
-							<li><a href="https://aryan.software">Website</a></li>
+							
 						</ul>
 					</div>
 	
 				</div>
 			</div>
 			<div class="col-lg-4 mt-4 mt-lg-0">
-					This is the non-technical personal website of a technical fella.
+					Aryan Ebrahimpour's Personal Website
 			</div>
 		</div>
 	</div>
