--- a/_includes/work-xp-viewer.html
+++ b/_includes/work-xp-viewer.html
@@ -7,7 +7,7 @@
     <div class="card card-aside">
         <a href="#" class="card-aside-column" style="background-image: url(/{{ xp.image-url }})"></a>
         <div class="card-body d-flex flex-column">
-            <h4><a href="#">{{ xp.title }}</a></h4>
+            <h4>{{ xp.title }}</h4>
             <div class="">{{ xp.body }}</div>
         </div>
     </div>
