--- a/_includes/cards/card.html
+++ b/_includes/cards/card.html
@@ -3,7 +3,7 @@
 	<div class="card-status{% if include.status-left %} card-status-left{% endif %} bg-{{ include.status | default: include.status-left }}"></div>
 	{% endif %}
 
-	<div class="card-header">
+	<div class="card-header" data-toggle="card-collapse">
 		<h3 class="card-title">{{ include.title | default: 'Card title' }}</h3>
 
 		{% unless include.hide-options %}
