--- a/_includes/education-viewer.html
+++ b/_includes/education-viewer.html
@@ -7,7 +7,7 @@
         <div class="card card-aside">
             <a href="#" class="card-aside-column" style="background-image: url(/{{ edu.image-url }})"></a>
             <div class="card-body d-flex flex-column">
-                <h4><a href="#">{{ edu.title }}</a></h4>
+                <h4>{{ edu.title }}</h4>
                 <div class="page-description edu-info">
                 <ul class="list-inline list-inline-dots m-0">
                         <li class="list-inline-item">{{edu.subtitle}}</li>
