--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
 				</div>
 			</div>
 			<div class="col-12 col-lg-auto mt-3 mt-lg-0 text-center">
-				Copyright © {{ site.time | date: '%Y' }} <a href="{{ site.base }}">{{ site.title }}</a>.
+				Copyright © {{ site.time | date: '%Y' }} {{ site.title }}.
 			</div>
 		</div>
 	</div>
