--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 <meta name="author" content="Aryan Ebrahimpour">
 <meta property="og:title" content="0xaryan's Personal Website">
 <meta property="og:type" content="website">
-<meta property="og:description" content="The non-technical personal website of a technical fella.">
+<meta property="og:description" content="Aryan Ebrahimpour's Personal Website">
 <meta property="og:locale" content="en-US">
 
 <!-- Generated: {{ site.time }} -->
