--- a/_includes/skill-viewer.html
+++ b/_includes/skill-viewer.html
@@ -8,11 +8,9 @@
     {% assign skill-doc = skill-raw | markdownify %}
     {% if skill.tags.size != 0 %}
         {% capture tags-list %}
-            <ul class="skill-tags">
             {% for tag in skill.tags%}
-                <li>{{ tag }}</li>
+                <span class="tag">{{ tag }}</span>
             {% endfor %}
-            </ul>
         {% endcapture %}
         {% include cards/card.html show-fullscreen=true collapsed=skill.collapsed title=skill.name close-button=false content=skill-doc show-footer=true footer-content=tags-list  %}
     {% else %}
