Make follow button to work

--- a/_includes/cards/profile.html
+++ b/_includes/cards/profile.html
@@ -8,9 +8,10 @@
 		<p class="mb-4">
 			I am a Software Engineer
 		</p>
-
+		<a target="_blank" href="http://twitter.com/0xaryan">
 		<button class="btn btn-outline-primary btn-sm">
 			<span class="fa fa-twitter"></span> Follow
 		</button>
+		</a>
 	</div>
 </div>
