--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,9 @@
 <link rel="shortcut icon" type="image/x-icon" href="/fav.png" />
 
 <meta name="author" content="Aryan Ebrahimpour">
-<meta property="og:title" content="0xaryan's Personal Website">
+<meta property="og:title" content="Aryan Ebrahimpour - Personal Website">
 <meta property="og:type" content="website">
-<meta property="og:description" content="Aryan Ebrahimpour's Personal Website">
+<meta property="og:description" content="Aryan Ebrahimpour - Personal Website">
 <meta property="og:locale" content="en-US">
 
 <!-- Generated: {{ site.time }} -->
