--- a/_includes/education-viewer.html
+++ b/_includes/education-viewer.html
@@ -11,7 +11,7 @@
                 <div class="page-description edu-info">
                 <ul class="list-inline list-inline-dots m-0">
                         <li class="list-inline-item">{{edu.subtitle}}</li>
-                        <li class="list-inline-item">{{edu.location }}</li>
+                        <li class="list-inline-item"><a href="{{edu.link }}" target="_blank">{{edu.location }}</a></li>
                         <li class="list-inline-item">{{edu.years}}</li>
                 </ul></div>
                 <div class="">{{ edu.body | markdownify }}</div>
