--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
 <title>{% if page.title %}{{ page.title }} - {% endif %}{% if layout.title %}{{ layout.title }} - {% endif %}{{ site.description }}</title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Kreon:300,400,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext">
 <script src="/assets/js/require.min.js"></script>
 <script>
@@ -35,7 +37,7 @@
 </script>
 
 <!-- Dashboard Core -->
-<link href="/assets/css/dashboard{% if page.rtl %}.rtl{% endif %}.css" rel="stylesheet" />
+<link href="/assets/css/dashboard{% if page.rtl %}.rtl{% endif %}.css?cache_id=dacb80ff-612a-4a06-bf0d-2bf66cadb211" rel="stylesheet" />
 <script src="/assets/js/dashboard.js"></script>
 
 {% for plugin in site.theme-plugins %}
