--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
 
 <!-- Generated: {{ site.time }} -->
 
-<title>{% if page.title %}{{ page.title }} - {% endif %}{% if layout.title %}{{ layout.title }} - {% endif %}{{ site.description }}</title>
+<title>{% if page.title %}{{ page.title }} — {% endif %}{% if layout.title %}{{ layout.title }} of {% endif %}{{ site.description }}</title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Kreon:300,400,700&display=swap" rel="stylesheet">
