--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,5 +10,16 @@
 	{{ content }}
 </div>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141854338-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141854338-1');
+</script>
+
+
 </body>
 </html>
