--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,9 +29,11 @@ permalink: /post/
 					</div>
 				</div>
 				<div class="card-footer">
+					<div class="tags">
 					{% for tag in page.tags %}
 					<span class="tag">{{ tag }}</span>
 					{% endfor %}
+					</div>
 				</div>
 			</div>
 		</div>
