Hide header columns on mobile

--- a/_includes/cards/presentation-list.html
+++ b/_includes/cards/presentation-list.html
@@ -4,9 +4,9 @@
                     <tr>
                         <th class="text-center">Preview</th>
                         <th>Title</th>
-                        <th>Tags</th>
-                        <th>Language</th>
-                        <th>Description</th>
+                        <th class="d-none d-md-table-cell text-nowrap">Tags</th>
+                        <th class="d-none d-md-table-cell text-nowrap">Language</th>
+                        <th class="d-none d-md-table-cell text-nowrap">Description</th>
                         <th>Download</th>
                     </tr>
                 </thead>
