Add css layout for comment

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,6 +39,7 @@
 <!-- Dashboard Core -->
 <link href="/assets/css/dashboard{% if page.rtl %}.rtl{% endif %}.css?cache_id=dacb80ff-612a-4a06-bf0d-2bf66cadb211" rel="stylesheet" />
 <script src="/assets/js/dashboard.js"></script>
+<link href="/assets/css/style.css" rel="stylesheet" />
 
 {% for plugin in site.theme-plugins %}
 <!-- {{ plugin[1].name }} Plugin -->
