--- a/_includes/work-xp-viewer.html
+++ b/_includes/work-xp-viewer.html
@@ -8,7 +8,13 @@
         <a href="#" class="card-aside-column" style="background-image: url(/{{ xp.image-url }})"></a>
         <div class="card-body d-flex flex-column">
             <h4>{{ xp.title }}</h4>
-            <div class="">{{ xp.body }}</div>
+            <div class="page-description edu-info">
+                <ul class="list-inline list-inline-dots m-0">
+                        <li class="list-inline-item">{{ xp.years }}</li>
+                        <li class="list-inline-item"><a href="{{ xp.website-url }}" target="_blank">Visit Website</a></li>
+                        <li class="list-inline-item">{{ xp.type }}</li>
+                </ul></div>
+            <div class="">{{ xp.body | markdownify }}</div>
         </div>
     </div>
 </div>
