--- a/_includes/education-viewer.html
+++ b/_includes/education-viewer.html
@@ -1,7 +1,7 @@
 <div class="col-md-12">
         <h3>Education</h3>
     </div>
-    
+
     {% for edu in site.data.education %}
     <div class="col-md-12">
         <div class="card card-aside">
@@ -14,7 +14,25 @@
                         <li class="list-inline-item"><a href="{{edu.link }}" target="_blank">{{edu.location }}</a></li>
                         <li class="list-inline-item">{{edu.years}}</li>
                 </ul></div>
-                <div class="">{{ edu.body | markdownify }}</div>
+                <div>
+					{{ edu.body | markdownify }}
+					{% if edu.submodule %}
+					<div class="card card-aside">
+							<a href="#" class="card-aside-column" style="background-image: url(/{{ edu.submodule.image }});background-size: contain;"></a>
+							<div class="card-body d-flex flex-column">
+								<h4>{{ edu.submodule.title }}</h4>
+								<div class="page-description edu-info">
+								<ul class="list-inline list-inline-dots m-0">
+										<li class="list-inline-item">{{ edu.submodule.inlineText }}</li>
+										<li class="list-inline-item"><a href="{{edu.submodule.link.location }}" target="_blank">{{edu.submodule.link.text }}</a></li>
+								</ul></div>
+								<div>
+										{{ edu.submodule.body | markdownify }}
+								</div>
+							</div>
+						</div>
+					{%endif%}
+				</div>
             </div>
         </div>
     </div>
