--- a/_includes/cards/presentation-list.html
+++ b/_includes/cards/presentation-list.html
@@ -11,8 +11,8 @@
                     </tr>
                 </thead>
                 <tbody>
-            {% for pres in site.data.presentations %}
-            
+            {% for pres in include.pres %}
+
             {% for l in site.data.languages %}{% if l.id == pres.language %}
             {% assign lang = l %}
             {% endif %}{% endfor %}
@@ -31,7 +31,7 @@
                     <i class="flag {{ lang.flag }}" data-toggle="tooltip" title="" data-original-title="{{ lang.name }}"></i>
                     {{ lang.name }}
                 </td>
-                <td class="text-center text-muted d-none d-md-table-cell text-nowrap">{% if pres.notes %} <a {{ if pres.notes }} data-toggle="tooltip" title="" data-original-title="{{ pres.notes }}" {{ endif}} href="javascript:void(0)">Info</a> {% else %} (No description) {% endif %}</td>
+                <td class="text-left text-muted d-none d-md-table-cell text-nowrap">{% if pres.notes %} <a {{ if pres.notes }} data-toggle="tooltip" title="" data-original-title="{{ pres.notes }}" {{ endif}} href="javascript:void(0)">Info</a> {% else %} (No description) {% endif %}</td>
                 <td class="text-left">
                     {% if pres.links.pptx %}
                     <img src="/assets/images/pressentation-type/pptx.png" style="width: 24px"/> <a target="_blank" href="{{ pres.links.pptx }}">PowerPoint</a>
