--- a/_includes/skill-viewer.html
+++ b/_includes/skill-viewer.html
@@ -4,7 +4,8 @@
 
 {% for skill in include.skill-source %}
 <div class="col-md-6">
-    {% capture skill-raw %}{% include skills/{{include.area}}/{{skill.source}} %}{% endcapture %}
+	{% capture skill-raw %}{% include skills/{{include.area}}/{{skill.source}} %}{% endcapture %}
+	{% capture github-url %}https://github.com/0xaryan?utf8=%E2%9C%93&tab=repositories&q=&type=&language={{ skill.github-lang }}{% endcapture %}
     {% assign skill-doc = skill-raw | markdownify %}
     {% if skill.tags.size != 0 %}
         {% capture tags-list %}
@@ -14,9 +15,9 @@
             {% endfor %}
             </div>
         {% endcapture %}
-        {% include cards/card.html show-fullscreen=true collapsed=skill.collapsed title=skill.name close-button=false content=skill-doc show-footer=true footer-content=tags-list  %}
+        {% include cards/card.html show-extra-button=skill.github-lang extra-url=github-url extra-icon='github' show-fullscreen=true collapsed=skill.collapsed title=skill.name close-button=false content=skill-doc show-footer=true footer-content=tags-list  %}
     {% else %}
-        {% include cards/card.html show-fullscreen=true collapsed=skill.collapsed title=skill.name close-button=false content=skill-doc show-footer=false  %}
+        {% include cards/card.html show-extra-button=skill.github-lang extra-url=github-url extra-icon='github' show-fullscreen=true collapsed=skill.collapsed title=skill.name close-button=false content=skill-doc show-footer=false  %}
     {%endif%}
 </div>
 {% endfor %}
