--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -8,9 +8,9 @@ layout: base
 		<div class="display-1 text-muted mb-5"><i class="si si-exclamation"></i> {{ error.name }}</div>
 
 		<h1 class="h2 mb-3">Achievement unlocked!.. You just found an error page..</h1>
-		<p class="h4 text-muted font-weight-normal mb-7">{{ error.description }}&hellip;</p>
+		<p class="h4 text-muted font-weight-normal mb-7">Jokes aside, {{ error.description }}&hellip;</p>
 
-		<a class="btn btn-primary" href="javascript:history.back()">
+		<a class="btn btn-primary" href="https://aryan.software">
 			<i class="fe fe-arrow-left mr-2"></i>Get back to a safe place
 		</a>
 	</div>
