--- a/_includes/utteranc.html
+++ b/_includes/utteranc.html
@@ -1,5 +1,5 @@
 <script src="https://utteranc.es/client.js"
-        repo="0xaryan/0xaryan.github.io"
+        repo="avestura/avestura.github.io"
         issue-term="pathname"
         label="comment"
         theme="github-light"
