--- a/_includes/footer-sub.html
+++ b/_includes/footer-sub.html
@@ -5,23 +5,23 @@
 				<div class="row">
 					<div class="col-6 col-md-3">
 						<ul class="list-unstyled mb-0">
-							<li><a href="https://github.com/0xaryan">GitHub</a></li>
-							<li><a href="https://twitter.com/0xaryan">Twitter</a></li>
+							<li><a href="https://github.com/avestura">GitHub</a></li>
+							<li><a href="https://twitter.com/avestura">Twitter</a></li>
 						</ul>
 					</div>
 					<div class="col-6 col-md-3">
 						<ul class="list-unstyled mb-0">
 							<li><a href="https://stackoverflow.com/users/7825034/aryan?tab=profile">Stack Overflow</a></li>
-							<li><a href="https://www.linkedin.com/in/0xaryan/">Linkedin</a></li>
+							<li><a href="https://www.linkedin.com/in/avestura/">Linkedin</a></li>
 						</ul>
 					</div>
 					<div class="col-6 col-md-3">
 						<ul class="list-unstyled mb-0">
-								<li><a href="http://t.me/Oxaryan">Telegram</a></li>
-							
+								<li><a href="http://t.me/avestura">Telegram</a></li>
+
 						</ul>
 					</div>
-	
+
 				</div>
 			</div>
 			<div class="col-lg-4 mt-4 mt-lg-0">
