--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -10,7 +10,7 @@ layout: base
 		<h1 class="h2 mb-3">Achievement unlocked!.. You just found an error page..</h1>
 		<p class="h4 text-muted font-weight-normal mb-7">Jokes aside, {{ error.description }}&hellip;</p>
 
-		<a class="btn btn-primary" href="https://aryan.software">
+		<a class="btn btn-primary" href="https://avestura.dev">
 			<i class="fe fe-arrow-left mr-2"></i>Get back to a safe place
 		</a>
 	</div>
